k8s/ingress.yml
  apiVersion: networking.k8s.io/v1
  kind: Ingress
  metadata:
    name: practice-ingress
  spec:
    rules:
      - http:
          paths:
            - path: '/'
              pathType: Prefix
              backend:
                service:
                  name: nginx-service
                  port:
                    number: 8080
            - path: '/apis/'
              pathType: Prefix
              backend:
                service:
                  name: web-service
                  port:
                    number: 8080
